# diatom

./: .gitignore  README.md  carbon_analysis.ipynb  diatom_analysis.ipynb  pyproject.toml  sup_coli_synthetic_com_legacy.ipynb  sup_mat_multiple_bioleaching.ipynb  sup_toy_example.ipynb  sup_toy_example_legacy.ipynb
clusters/: EX_co2_e_DM_biomass_c_clusters.csv  EX_no3_e_DM_biomass_c_clusters.xlsx
ecosystem/: analyze.py  base.py  community.py  full.py  grid.py  model_transform.py  plot.py
result_files/DM/EX_co2_e_DM_biomass_c/dataframes/: Global_metrics_NR-1_Delta0.0125.csv  Global_metrics_NR34_Delta0.0125_M12.csv  Global_metrics_NR34_Delta0.0125_M15.csv  Global_metrics_NR34_Delta0.05_M15.csv  Global_metrics_NR41_Delta0.0125_M15.csv  Metrics_per_reaction_NR33_Delta0.0125.csv  Metrics_per_reaction_NR34_Delta0.0125.csv  Metrics_per_reaction_NR34_Delta0.0125_M14.csv  Metrics_per_reaction_NR34_Delta0.05_M14.csv  Metrics_per_reaction_NR37_Delta0.0125_M14.csv  Metrics_per_reaction_NR41_Delta0.0125.csv  (+7 more)
result_files/P. Tricornutum/supplementary/: EX_ci_e_DM_biomass_c.xlsx  EX_co2_e_DM_biomass_c.xlsx  EX_no3_e_DM_biomass_c.xlsx
scripts/: metrics.py  model_clustering.py  model_io.py
scripts/diatom/: analyze.py  diatom.py  grid.py  metrics.py  plot.py
src/: __init__.py  analyze.py  clustering.py  constants.py  diatom.py  feature_selection.py  grid.py  io.py  metabolic_experiment.py  metrics.py  model_clustering.py  model_io.py  plot.py  polytope.py
src/diatom/: analyze.py  diatom.py  grid.py  plot.py  polytope.py
src/ecosystem/: base.py
(+28110 files in other folders)
